--- a/index.html
+++ b/index.html
@@ -35,11 +35,43 @@
                                     <i class="fa-solid  fa-ellipsis-vertical px-2"></i>
                                 </div>
                             </div>
-                            
                         </header>
+                        <!-- desktop notifies -->
+                        <div class="desktop-notifies d-flex p-3">
+                            <div><i class="fa-solid fa-bell-slash roundedImg"></i></div>
+                            <div>
+                                <div>Ricevi notiiche di nuovi messaggi</div>
+                                <div>Attiva notifiche desktop</div>
+                            </div>
+                        </div>
+                        <!-- search bar + users list -->
+                        <div class="d-flex bg-danger px-3 py-1">
+                            <div><i class="fa-solid fa-magnifying-glass px-3"></i></div>
+                            <div><input class="search-bar" type="text" placeholder="Cerca o inizia una nuova chat">
+                            </div>
+                        </div>
+                        <div>
+                            <ul>
+                                <!-- contacts -->
+                                <li v-for="(item, index) in contacts" @click="chatSelector" class="bg-primary px-4">
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <!-- section left friend -->
+                                        <div class="d-flex py-3">
+                                            <img class="roundedImg" :src="contacts[index].avatar" alt="">
+                                        <div class=" px-3">
+                                            <div>{{contacts[index].name}}</div>
+                                            <div>{{item.messages[item.messages.length-1].message}}</div>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <span>12:00</span>
+                                    </div>
+                        </div>
+                        </li>
+                        </ul>
                     </div>
-                </section>
-            </div>            
+
+            </div>         
     </div>
 
     <!--include Vue-->
